add endpoints to list and add/remove dependencies
